fix(UsersTableAction): break-word for group name + overflow

--- a/styles/default.css
+++ b/styles/default.css
@@ -16,4 +16,12 @@
       margin-top: 0;
     }
   }
+
+#users-table-action {
+  overflow-x: auto;
+}
+
+td.users-table-break-word {
+  word-break: break-all;
+}
   
